fix: double digit spacing

--- a/src/shared/components/challenge-detail/Specification/styles.scss
+++ b/src/shared/components/challenge-detail/Specification/styles.scss
@@ -172,8 +172,8 @@ $tc-link-visited: #0c4e98;
       font-weight: 700;
       text-align: right;
       content: counter(item) ".";
-      padding: 0 7px 0 0;
-      width: 22px;
+      padding: 0 8px 0 0;
+      width: 30px;
     }
   }
 
@@ -356,8 +356,8 @@ $tc-link-visited: #0c4e98;
           font-weight: 700;
           text-align: right;
           content: counter(item) ".";
-          padding: 0 7px 0 0;
-          width: 22px;
+          padding: 0 8px 0 0;
+          width: 30px;
         }
       }
     }
